# asio-tcp-server-example

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: constants.cmake  find_libs.cmake  platform.cmake
src/client/: CMakeLists.txt
src/client/core/: CMakeLists.txt
src/client/core/public/app/client/core/: IServerConnection.hxx
src/client/windows/: CMakeLists.txt
src/client/windows/private/app/client/windows/: WinClient.cpp  main.cpp
src/client/windows/public/app/client/windows/: asio.hpp  main.hpp
src/server/: CMakeLists.txt
src/server/core/: CMakeLists.txt
src/server/core/private/app/server/core/: ClientConnection.cpp  Server.cpp
src/server/core/public/app/server/core/: ClientConnection.hpp  IClientConnection.hxx  Server.hpp
src/server/windows/: CMakeLists.txt
src/server/windows/private/app/server/windows/: WinClientConnection.cpp  WinServer.cpp  main.cpp
src/server/windows/public/app/server/windows/: WinClientConnection.hpp  WinServer.hpp  asio.hpp  main.hpp
